<resources>
    <string name="app_name">InstaShare</string>

    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="don_t_remember_password">Don\'t Remember password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account? Login here</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="or">or</string>
    <string name="enter_username">Enter Username</string>
    <string name="register_now">Register Now</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Full Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search...</string>
    <string name="post">POST</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="photo">Photo</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="logo">logo</string>

</resources>
