<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:gravity="center"
    android:paddingStart="24dp"
    android:paddingTop="10dp"
    android:paddingEnd="24dp"
    android:paddingBottom="10dp"
    tools:context="devdtoo.developer.instashare.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/create_new_account"
            android:textColor="@color/gray_scale"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/et_bg"
            android:hint="@string/enter_username"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColorHint="@color/login_form_details" />

        <EditText
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/et_bg"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColorHint="@color/login_form_details" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/et_bg"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColorHint="@color/login_form_details" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/et_bg"
            android:drawableEnd="@drawable/ic_eye"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColorHint="@color/login_form_details" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_bg"
            android:text="@string/register_now"
            android:textAllCaps="false"
            android:textColor="@color/login_form_details_medium" />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/login_form_details" />

    </LinearLayout>


</RelativeLayout>